--- a/Source/Eml/Eml.csproj
+++ b/Source/Eml/Eml.csproj
@@ -17,8 +17,9 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>eml reader</PackageTags>
     <RootNamespace>Keon.Eml</RootNamespace>
-    <Version>6.0.0</Version>
+    <Version>6.0.1</Version>
     <PackageReleaseNotes>Upgrade to .NET 8.0</PackageReleaseNotes>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -27,10 +28,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\Nuget\image.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
+    <None Include="..\..\Nuget\image.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
