--- a/Source/NHibernate/NHibernate.csproj
+++ b/Source/NHibernate/NHibernate.csproj
@@ -1,47 +1,46 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net8.0</TargetFramework>
-	<AssemblyName>Keon.NHibernate</AssemblyName>
-	<RootNamespace>Keon.NHibernate</RootNamespace>
-	<Authors>darakeon</Authors>
-	<Company>Dara Keon</Company>
-	<Product>Keon NHibernate</Product>
-	<Description>Filter to only use entities that implements the mandatory interfaces</Description>
-	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-	<PackageProjectUrl>https://github.com/darakeon/dk-lib</PackageProjectUrl>
-	<PackageIconUrl></PackageIconUrl>
-	<RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
-	<RepositoryType>git</RepositoryType>
-	<PackageTags>utility nhibernate orm</PackageTags>
-	<PackageReleaseNotes>Improve transaction error message with inner exception for rollback</PackageReleaseNotes>
-	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>5.6.1</Version>
-	<PackageIcon>image.png</PackageIcon>
+    <TargetFramework>net8.0</TargetFramework>
+    <AssemblyName>Keon.NHibernate</AssemblyName>
+    <RootNamespace>Keon.NHibernate</RootNamespace>
+    <Authors>darakeon</Authors>
+    <Company>Dara Keon</Company>
+    <Product>Keon NHibernate</Product>
+    <Description>Filter to only use entities that implements the mandatory interfaces</Description>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/darakeon/dk-lib</PackageProjectUrl>
+    <PackageIconUrl></PackageIconUrl>
+    <RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>utility nhibernate orm</PackageTags>
+    <PackageReleaseNotes>Improve transaction error message with inner exception for rollback</PackageReleaseNotes>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>5.6.2</Version>
+    <PackageIcon>image.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	<DocumentationFile>Keon.NHibernate.xml</DocumentationFile>
+    <DocumentationFile>Keon.NHibernate.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="FluentNHibernate" Version="3.4.1" />
-	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.7" />
-	<PackageReference Include="NHibernate" Version="5.5.3" />
-	<PackageReference Include="System.Net.Http" Version="4.3.4" />
-	<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
+    <PackageReference Include="FluentNHibernate" Version="3.4.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.7" />
+    <PackageReference Include="NHibernate" Version="5.5.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-	<ProjectReference Include="..\Util\Util.csproj" />
+    <ProjectReference Include="..\Util\Util.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-	<None Include="..\..\Nuget\image.png">
-	  <Pack>True</Pack>
-	  <PackagePath></PackagePath>
-	</None>
+    <None Include="..\..\Nuget\image.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
