--- a/Source/XML/XML.csproj
+++ b/Source/XML/XML.csproj
@@ -1,39 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFramework>net8.0</TargetFramework>
-	<AssemblyName>Keon.XML</AssemblyName>
-	<RootNamespace>Keon.XML</RootNamespace>
-	<Authors>darakeon</Authors>
-	<Company>Dara Keon</Company>
-	<Product>Keon XML</Product>
-	<Description>Helpers to Handle XML in a simpler way</Description>
-	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-	<PackageProjectUrl>https://github.com/darakeon/dk-lib</PackageProjectUrl>
-	<PackageIconUrl></PackageIconUrl>
-	<RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
-	<RepositoryType>git</RepositoryType>
-	<PackageTags>utility xml</PackageTags>
-	<PackageReleaseNotes>Upgrade to .NET 8.0</PackageReleaseNotes>
-	<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-	<Version>5.0.0</Version>
-	<PackageIcon>image.png</PackageIcon>
+    <TargetFramework>net8.0</TargetFramework>
+    <AssemblyName>Keon.XML</AssemblyName>
+    <RootNamespace>Keon.XML</RootNamespace>
+    <Authors>darakeon</Authors>
+    <Company>Dara Keon</Company>
+    <Product>Keon XML</Product>
+    <Description>Helpers to Handle XML in a simpler way</Description>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/darakeon/dk-lib</PackageProjectUrl>
+    <PackageIconUrl></PackageIconUrl>
+    <RepositoryUrl>https://github.com/darakeon/dk-lib</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>utility xml</PackageTags>
+    <PackageReleaseNotes>Upgrade to .NET 8.0</PackageReleaseNotes>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>5.0.1</Version>
+    <PackageIcon>image.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	<DocumentationFile>Keon.XML.xml</DocumentationFile>
+    <DocumentationFile>Keon.XML.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-	<ProjectReference Include="..\Util\Util.csproj" />
+    <ProjectReference Include="..\Util\Util.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-	<None Include="..\..\Nuget\image.png">
-	  <Pack>True</Pack>
-	  <PackagePath></PackagePath>
-	</None>
+    <None Include="..\..\Nuget\image.png" Pack="true" PackagePath="\" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
